--- a/todo-list.html
+++ b/todo-list.html
@@ -38,7 +38,7 @@
         />
         <input type="number" class="js-task-qty task-qty" min="0" max="20" />
         <a class="task-input-add-btn">
-          <i class="bx bxs-plus-square"></i>
+          <i class="bx bx-plus-circle"></i>
         </a>
       </section>
       <section class="task-container">
