Fix JS todoListHTML

--- a/todo-list.html
+++ b/todo-list.html
@@ -42,6 +42,7 @@
         </a>
       </section>
 
+      <!-- Task section -->
       <section class="task-container">
         <div class="js-task task-wrapper"></div>
       </section>
