--- a/todo-list.html
+++ b/todo-list.html
@@ -36,7 +36,13 @@
           max="25"
           placeholder="Task"
         />
-        <input type="number" class="js-task-qty task-qty" min="0" max="20" />
+        <input
+          type="number"
+          class="js-task-qty task-qty"
+          min="0"
+          max="20"
+          maxlength="2"
+        />
         <a class="task-input-add-btn">
           <i class="bx bx-plus-circle"></i>
         </a>
