--- a/todo-list.html
+++ b/todo-list.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <span class="logo" href="#">Todo List</span>
+      <h1 class="logo" href="#">Todo List</h1>
       <a class="list-folder"><i class="bx bx-folder"></i></a>
     </header>
 
