--- a/todo-list.html
+++ b/todo-list.html
@@ -12,13 +12,13 @@
     />
   </head>
   <body>
-    <header class="header overlay">
+    <header class="header">
       <h1 class="logo" href="#">Todo List</h1>
       <a class="list-folder"><i class="bx bx-folder"></i></a>
     </header>
 
-    <main class="main-container overlay">
-      <section class="input-container overlay">
+    <main class="main-container">
+      <section class="input-container">
         <input
           type="text"
           class="js-list-name list-name"
@@ -50,17 +50,18 @@
       </section>
 
       <!-- Task section -->
-      <section class="task-container overlay">
+      <section class="task-container">
         <div class="js-task task-wrapper"></div>
       </section>
     </main>
     <!-- Modals -->
-    <div class="task-remove-modal modal-hidden">
+    <div class="task-remove-modal modal--hidden">
       <h1>Do you really want to remove this task?</h1>
       <div class="y-n-btn">
         <button class="remove-confirm yes-btn">Yes</button>
         <button class="remove-confirm no-btn">No</button>
       </div>
     </div>
+    <div class="overlay overlay--hidden"></div>
   </body>
 </html>
