--- a/todo-list.html
+++ b/todo-list.html
@@ -29,7 +29,7 @@
         <a class="list-name-remove-btn">
           <i class="bx bx-trash"></i>
         </a>
-
+        <!-- Input task -->
         <input
           type="text"
           class="js-task-input task-input"
@@ -51,7 +51,9 @@
 
       <!-- Task section -->
       <section class="task-container">
-        <div class="js-task task-wrapper"></div>
+        <div class="js-task task-wrapper">
+          <div class="task"></div>
+        </div>
       </section>
     </main>
     <!-- Modals -->
