Change cross icon

--- a/todo-list.html
+++ b/todo-list.html
@@ -37,7 +37,7 @@
 
       <section class="task-container">
         <div class="task-wrapper">
-          <div class="task">
+          <!-- <div class="task">
             <div class="task-name-wrapper">
               <span class="task-name">Banana</span>
             </div>
@@ -48,7 +48,7 @@
             <a class="task-remove-btn">
               <i class="bx bx-trash"></i>
             </a>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
