--- a/todo-list.html
+++ b/todo-list.html
@@ -47,14 +47,24 @@
             </a>
             <a class="task-remove-btn">
               <i class="bx bx-trash"></i>
-            </a>
+            </a> 
           </div> -->
+          <div class="overlay hidden">
+            <div class="task-remove-modal hidden">
+              <h1>Do you really want to remove this task?</h1>
+              <div class="y-n-btn">
+                <button class="remove-confirm yes-btn">Yes</button>
+                <button class="remove-confirm no-btn">No</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
     <!-- Modals -->
 
-    <div class="overlay hidden">
+    <!-- <div class="overlay hidden">
       <div class="task-remove-modal hidden">
         <h1>Do you really want to remove this task?</h1>
         <div class="y-n-btn">
@@ -62,6 +72,6 @@
           <button class="remove-confirm no-btn">No</button>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
