--- a/todo-list.html
+++ b/todo-list.html
@@ -15,20 +15,22 @@
   <body>
     <header class="header">
       <h1 class="logo" href="#">Todo List</h1>
-      <a class="list-folder"><i class="bx bx-folder"></i></a>
+      <a class="list-folder" tabindex="0"><i class="bx bx-folder"></i></a>
     </header>
 
     <main class="main-container">
       <section class="input-container">
         <input type="text" class="list-name" max="25" placeholder="List name" />
-        <a class="save-btn"><i class="bx bxs-folder-plus"></i></a>
-        <a class="list-name-remove-btn">
+        <a class="save-btn" tabindex="0"><i class="bx bxs-folder-plus"></i></a>
+        <a class="list-name-remove-btn" tabindex="0">
           <i class="bx bx-trash"></i>
         </a>
         <!-- Input task -->
         <input type="text" class="task-input" max="25" placeholder="Task" />
-        <a class="task-input-reset-btn"><i class="bx bx-reset"></i></a>
-        <a class="task-input-add-btn">
+        <a class="task-input-reset-btn" tabindex="0"
+          ><i class="bx bx-reset"></i
+        ></a>
+        <a class="task-input-add-btn" tabindex="0">
           <i class="bx bx-plus-circle"></i>
         </a>
       </section>
