Update modal function

--- a/todo-list.html
+++ b/todo-list.html
@@ -65,6 +65,7 @@
           <button class="remove-confirm no-btn">No</button>
         </div>
       </div>
+      <div class="task-wrapper-modal hidden"></div>
     </div>
   </body>
 </html>
