--- a/todo-list.html
+++ b/todo-list.html
@@ -66,6 +66,13 @@
         </div>
       </div>
       <div class="task-wrapper-modal hidden"></div>
+      <div class="list-remove-modal hidden">
+        <h1>Do you really want to remove this list?</h1>
+        <div class="y-n-btn">
+          <button class="remove-confirm yes-list-btn">Yes</button>
+          <button class="remove-confirm no-list-btn">No</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
